--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 //file:noinspection GroovyAccessibility
 plugins {
     id 'fabric-loom' version '1.3-SNAPSHOT'
+    id 'io.github.juuxel.loom-vineflower' version '1.11.0'
     id 'maven-publish'
 }
 
