Add dependencies modmenu and midnightlib

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ base {
 }
 
 repositories {
-
+    maven { url "https://maven.terraformersmc.com/releases/" }
+    maven { url "https://api.modrinth.com/maven" }
 }
 
 loom {
@@ -53,6 +54,9 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+    // Include MidnightLib in the release jar
+    modImplementation include("maven.modrinth:midnightlib:${project.midnightlib_version}")
 }
 
 processResources {
