--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ maven_group=dev.seano.creeplets
 archives_base_name=creeplets
 # Dependencies
 fabric_version=0.83.0+1.20
+midnightlib_version=1.4.0-fabric
+modmenu_version=7.0.0
