Add cloth-config dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ maven_group=dev.seano.creeplets
 archives_base_name=creeplets
 # Dependencies
 fabric_version=0.102.0+1.21
+cloth_config_version=15.0.140
